7e895f54bb3f replay eks

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,16 @@
 before_cache:
-- find $TRAVIS_BUILD_DIR -name .ekstazi | while read line; do du -sh $line;         DIR=$(dirname
-  $HOME/CACHE$line); mkdir -p $DIR; cp -r $line $DIR; done
+- rm -rf $HOME/CACHE; find $TRAVIS_BUILD_DIR -name .ekstazi | while read line; do
+  du -sh $line;         DIR=$(dirname $HOME/CACHE$line); mkdir -p $DIR; cp -r $line
+  $DIR; done
 - echo CACHESIZE $(du -sh $HOME/CACHE)
 before_install:
 - find $HOME/CACHE -name .ekstazi | while read line; do du -sh $line;         DIR=$(dirname
-  ${line#$HOME/CACHE}); cp -r $line $DIR; done
+  ${line#$HOME/CACHE}); if [[ -d ${DIR#.ekstazi/} ]]; then cp -r $line $DIR; fi; done
 - ./build-tools/install-protobuf.sh
 before_script:
 - find $TRAVIS_BUILD_DIR -name .ekstazi | while read line; do rm -rf $line; done
 - find $HOME/CACHE -name .ekstazi | while read line; do du -sh $line;         DIR=$(dirname
-  ${line#$HOME/CACHE}); cp -r $line $DIR; done
+  ${line#$HOME/CACHE}); if [[ -d ${DIR#.ekstazi/} ]]; then cp -r $line $DIR; fi; done
 cache:
   directories:
   - $HOME/CACHE
