--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ before_cache:
 - rm -rf $HOME/CACHE; find $TRAVIS_BUILD_DIR -name .ekstazi | while read line; do
   du -sh $line;         DIR=$(dirname $HOME/CACHE$line); mkdir -p $DIR; cp -r $line
   $DIR; done
-- echo CACHESIZE $(du -sh $HOME/CACHE)
+- echo CACHESIZE $(du -sk $HOME/CACHE)
 before_install:
 - find $HOME/CACHE -name .ekstazi | while read line; do du -sh $line;         DIR=$(dirname
   ${line#$HOME/CACHE}); if [[ -d ${DIR#.ekstazi/} ]]; then cp -r $line $DIR; fi; done
